--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,17 +72,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/font/Roboto-Regular.ttf
-          weight: 400
-        - asset: assets/font/Roboto-Medium.ttf
-          weight: 500
-        - asset: assets/font/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/font/Roboto-Black.ttf
-          weight: 900
+  # fonts:
+  #   - family: Roboto
+  #     fonts:
+  #       - asset: assets/font/Roboto-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/font/Roboto-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/font/Roboto-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/font/Roboto-Black.ttf
+  #         weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
