--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   go_router: ^4.5.1
-  fl_chart: ^0.55.2
+  # fl_chart: ^0.55.2
+  fl_chart: ^0.41.0
 
 dev_dependencies:
   flutter_test:
