--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
   go_router: ^4.5.1
+  charts_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
