--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   go_router: ^4.5.1
   # fl_chart: ^0.55.2
   fl_chart: ^0.41.0
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
