--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # fl_chart: ^0.55.2
   fl_chart: ^0.41.0
   charts_flutter: ^0.9.0
+  # country_code_picker: ^1.4.0
+  country_picker: ^2.0.19
+  country_calling_code_picker: ^2.0.1
+  country_code_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
