--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   country_picker: ^2.0.19
   country_calling_code_picker: ^2.0.1
   country_code_picker: ^2.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
