--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,13 @@ dependencies:
   country_calling_code_picker: ^2.0.1
   country_code_picker: ^2.0.2
   http: ^0.13.5
+  test: ^1.22.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
