--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   country_calling_code_picker: ^2.0.1
   country_code_picker: ^2.0.2
   http: ^0.13.5
+  localstorage: ^4.0.0+1
 
 dev_dependencies:
   flutter_test:
