--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   country_code_picker: ^2.0.2
   http: ^0.13.5
   test: ^1.22.0
-
+  integration_test: ^0.8.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter 
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
