--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   country_code_picker: ^2.0.2
   http: ^0.13.5
   localstorage: ^4.0.0+1
+  test: ^1.21.1
+  flutter_driver: ^0.0.1
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_driver:
-    sdk: flutter 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
