--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_driver:
-    sdk: flutter 
-  integration_test:
-    sdk: flutter
+  # flutter_driver:
+  #   sdk: flutter 
+  # integration_test:
+  #   sdk: flutter
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
