--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,23 @@
-sonar.projectKey=Feventolla_Farm-Advisor
-sonar.organization=feventolla
+# Project identification
+sonar.projectKey=Farm-Advisor
+sonar.projectName=Farm-Advisor
+sonar.projectVersion=1.0
+	
+# Source code location.
+# Path is relative to the sonar-project.properties file. Defaults to .
+# Use commas to specify more than one folder.
+sonar.sources=lib
+sonar.tests=test
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Farm-Advisor
-#sonar.projectVersion=1.0
+# Encoding of the source code. Default is default system encoding.
+sonar.sourceEncoding=UTF-8
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Allows reuse of an existing analyzer report
+# sonar.dart.analysis.reportPath=
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Analyzer mode
+# Can be:
+# - flutter (flutter analyze) - default
+# - dart (dart analyze)
+# - legacy (dartanalyzer)
+# sonar.flutter.analyzer.mode= 
