--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,16 @@ dependencies:
   http: ^0.13.5
   localstorage: ^4.0.0+1
   test: ^1.21.1
-  flutter_driver: ^0.0.1
   shared_preferences: ^2.0.17
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # flutter_driver:
-  #   sdk: flutter 
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter 
   # integration_test:
   #   sdk: flutter
   
